syntax= "proto3";

package prestation;

service PrestationService{
    rpc Rachat(Prestation)returns(Response){}
    rpc ValeurRachat(Request)returns(Response){}
}

message Prestation{
    string id=1;
    string transacno=2;
    string nomclient=3;
    string prenomclient=4;
    string telephone=5;
    string datedamandeuser=6;
    string conventionno=7;
    string policeno=8;
    string montantdemande=9;
    string montantrestant=10;
    string createdAt=11;
}
message Request{
    int32 police=1;
}

message Response{
    bool done=1;
    string description=2;
    string maximumrachetable=3;
    Prestation prestation=4;
    repeated Error errors=5;
}
message Error{
    int32 code=1;
    string description=2;
}